--- a/your-project/virus-Copy1.ipynb
+++ b/your-project/virus-Copy1.ipynb
@@ -11832,10 +11832,10 @@
    "source": [
     "multi_group= virus.groupby([\"Date\",\"Country\"])[[\"Confirmed\",\"Deaths\"]].sum().reset_index()\n",
     "multi_group\n",
-    "#multi_group2=[i.split(\" \")[0] for i in virus[\"Date\"]]\n",
-    "#multi_group_series = pd.Series( (v for v in multi_group2) )\n",
-    "#multi_group[\"Date\"]=multi_group_series\n",
-    "#multi_group.head(50)\n",
+    "multi_group2=[i.split(\" \")[0] for i in virus[\"Date\"]]\n",
+    "multi_group_series = pd.Series( (v for v in multi_group2) )\n",
+    "multi_group[\"Date\"]=multi_group_series\n",
+    "multi_group.head(50)\n",
     "\n",
     "#new_row_df=pd.DataFrame([[\"01/22-2020\",\"Worldwide\"]])\n",
     "#virusconcat = pd.concat([multi_group.loc[0:38],new_row_df])\n",
